challenge/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tyrion-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tyrion
    spec:
      containers:
      - name: tyrion
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaime-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime
    spec:
      containers:
      - name: jaime
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
