challenge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tyrion-svc
  labels:
    app: tyrion
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tyrion
---
apiVersion: v1
kind: Service
metadata:
  name: jaime-svc
  labels:
    app: jaime
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: jaime
